# substrate-node-poc

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/tribal/: Cargo.toml  LICENSE  README.md
pallets/tribal/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
